[package]
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
name = "kobject-uevent"
version = "0.1.1"
edition = "2018"
description = "Netlink kobject uevent packets parser"
license = "MIT"
repository = "https://github.com/rust-italia/kobject-uevent"
readme = "README.md"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
netlink-sys = "0.8.3"
